--- a/sponsors.html
+++ b/sponsors.html
@@ -25,7 +25,7 @@
         <meta name="msapplication-TileImage" content="/mstile-144x144.png">
         <meta name="theme-color" content="#b81818">
     </head>
-    <body>
+    <body class="RedBack">
         
         <div id="Container">
           
@@ -105,7 +105,7 @@
                 <div class="BoxSponsorRight">
                     <ul>
                         <li>Naming rights of a food stand, cocktail or smaller attraction at the ball </li>
-                        <li>Sponsor profile on a<marquee>????</marquee></li>
+                        <li>Sponsor profile on website</li>
                         <li>Sponsor profile in ball program given to all attendees</li>
                     </ul>
                 </div>
