--- a/sponsors.html
+++ b/sponsors.html
@@ -33,7 +33,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
-                    <li><a href="contacts.html">Contacts</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
 
