--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,10 @@
             
             <div id="Deet">
                 
-                <img height="500px" width="500px" src="">
+                <img height="300px" width="300px" src="">
                 <h1>Name</h1>
-                <h2>Email</h2>
+                <h2>Role</h2>
+                <h3>Email</h3>
             </div>
         </div>
     </body>
