--- a/sponsors.html
+++ b/sponsors.html
@@ -31,10 +31,10 @@
           
             <nav>
                 <ul>
-                    <li><a href="index">Home</a></li>
-                    <li><a href="tickets">Tickets</a></li>
-                    <li><a href="contact">Contact</a></li>
-                    <li><a href="about">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="tickets.html">Tickets</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
 
             </nav>
