--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             
             <div id="Deet">
                 
-                <img height="300px" width="300px" src="">
+                <img height="300px" width="300px" src="London-1.jpg">
                 <h1>Name</h1>
                 <h2>Role</h2>
                 <h3>Email</h3>
