--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div id="FrontImage"><img id="FrontImageImage" src="svgstag.svg"></div>
             
             <div id="Footer">
-                @Agsiu  
+                Agsiu  
             </div>
             
         </div>
