--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         <meta name="msapplication-TileImage" content="/mstile-144x144.png">
         <meta name="theme-color" content="#b81818">
 
+        <script>
+        
+            var easter_egg = new Konami('http://www.hertfordball.co.uk/konami.jpg');
+            
+        </script>
     </head>
     <body class="RedBack">
 
