--- a/sponsors.html
+++ b/sponsors.html
@@ -30,7 +30,7 @@
         
             //var easter_egg = new Konami(function() { alert('Konami code!')});
             //var easter_egg = new Konami("http://www.hertfordball.co.uk/konami.jpg");
-            location.href = "http://hertfordball.co.uk/sponsors";
+            //location.href = "http://hertfordball.co.uk/sponsors";
             
         </script>
     </head>
