--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
             //var easter_egg = new Konami(function() { alert('Konami code!')});
             var easter_egg = new Konami("http://www.hertfordball.co.uk/konami.jpg");
-            location.href = "http://hertfordball.co.uk"
+            //location.href = "http://hertfordball.co.uk"
             
         </script>
     </head>
