--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sponsors.html">Sponsors</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
