--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
             <nav>
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="sponsors.html">Sponsors</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
                     <li><a href="contact.html">Contact</a></li>
