--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="FrontImage"><img id="FrontImageImage" src="svgstag.svg"></div>
 
             <div id="Footer">
-                @Agsiu
+                Antonia Siu<br>Michael Agius
             </div>
 
         </div>
