--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </ul>
             </nav>
 
-            <div id="MainTitle"><h1 class="thin"><span>Hertford Ball 2OI7</span></h1></div>
+            <div id="MainTitle"><h1><span>Hertford Ball 2OI7</span></h1></div>
 
             <div id="FrontImage"><img id="FrontImageImage" src="svgstag.svg"></div>
 
