--- a/sponsors.html
+++ b/sponsors.html
@@ -121,6 +121,12 @@
                 </div>
 
             </div>
+            
+            <div id="Deet">
+                <h1>Sponsorship Contact</h1>
+                <h2>Jong Kwon</h2>
+                <h3>sponsorship&#64;hertfordball.co.uk</h3>
+            </div>
         </div>
     </body>
 </html>
