--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,9 @@
             </nav>
             
             <div id="Deet">
-                <h1>Boss</h1>
+                <h1>President</h1>
                 <h2>Jei Diwakar</h2>
-                <h3>boss&#64;hertfordball.co.uk</h3>
+                <h3>president&#64;hertfordball.co.uk</h3>
             </div>
             
             <div id="Deet">
