mobile css font sizes

--- a/sponsors.html
+++ b/sponsors.html
@@ -125,7 +125,9 @@
             <div id="Deet">
                 <h1>Sponsorship Contact</h1>
                 <h2>Jong Kwon</h2>
-                <h3>sponsorship&#64;hertfordball.co.uk</h3>
+                <h3><a href="mailto:sponsorship@hertfordball.co.uk">
+                    sponsorship&#64;hertfordball.co.uk
+                </a></h3>
             </div>
         </div>
     </body>
