--- a/tickets.html
+++ b/tickets.html
@@ -24,6 +24,7 @@
         <meta name="msapplication-TileColor" content="#b91d47">
         <meta name="msapplication-TileImage" content="/mstile-144x144.png">
         <meta name="theme-color" content="#b81818">
+        <script src="menu.js" type="text/javascript"></script>
         <script src="konami.js" type="text/javascript"></script>
         
         <script>
@@ -34,7 +35,7 @@
             
         </script>
     </head>
-    <body class="RedBack">
+    <body class="RedBack" onload="ready()">
 
         <div id="Container">
 
