fixed footer finally

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div id="FrontImage"><img id="FrontImageImage" src="svgstag.svg"></div>
 
             <div id="Footer">
-                site by<br>Antonia Siu<br>Michael Agius
+                site by <br id="FDes">Antonia Siu <br id="FDes"><span id="FMob">and </span>Michael Agius 
             </div>
 
         </div>
