added tech contact

--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,15 @@
                     health_safety&#64;hertfordball.co.uk
                 </a></h3>
             </div>
-
+            
+            <div id="Deet">
+                <h1>Tech Director</h1>
+                <h2>Michael Agius</h2>
+                <h3><a href="mailto:nerd@michaelagius.uk">
+                    nerd&#64;michaelagius.uk
+                </a></h3>
+            </div>
+            
             <div id="Deet">
                 <h1>Anything Else</h1>
                 <h3><a href="mailto:info@hertfordball.co.uk">
