--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <nav>
                 <ul>
-                    <li onclick="thing()" class="show">Menu</li>
+                    <li onclick="thing()" class="show"><img src="menu512.png" alt="Menu"></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sponsors.html">Sponsors</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
@@ -50,7 +50,7 @@
                 </ul>
             </nav>
 
-            <div id="MainTitle"><h1><span>Hertford Ball 2OI7</span></h1></div>
+            <div id="MainTitle"><h1><span id="MainTitleTitleSpan">Hertford Ball 2OI7</span><a href="tickets.html"><span id="MainTitleTicketSpan">Buy Tickets</span></a></h1></div>
 
             <div id="FrontImage"><img id="FrontImageImage" src="svgstag.svg"></div>
 
