more konami and folder structure :D

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Hertford Ball 2017</title>
         <meta charset="UTF-8">
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100italic,100,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="./style.css" type="text/css">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
@@ -24,13 +24,13 @@
         <meta name="msapplication-TileColor" content="#b91d47">
         <meta name="msapplication-TileImage" content="/mstile-144x144.png">
         <meta name="theme-color" content="#b81818">
-        <script src="menu.js" type="text/javascript"></script>
-        <script src="konami.js" type="text/javascript"></script>
+        <script src="js/menu.js" type="text/javascript"></script>
+        <script src="js/konami.js" type="text/javascript"></script>
 
         <script>
 
             //var easter_egg = new Konami(function() { alert('Konami code!')});
-            var easter_egg = new Konami("http://www.hertfordball.co.uk/konami.jpg");
+            var easter_egg = new Konami("img/konami.jpg");
             //location.href = "http://hertfordball.co.uk"
 
         </script>
@@ -41,7 +41,7 @@
 
             <nav>
                 <ul>
-                    <li onclick="thing()" class="show"><img src="menu512.png" alt="Menu"></li>
+                    <li onclick="thing()" class="show"><img src="img/menu512.png" alt="Menu"></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sponsors.html">Sponsors</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
@@ -52,7 +52,7 @@
 
             <div id="MainTitle"><h1><span id="MainTitleTitleSpan">Hertford Ball 2OI7</span><a href="tickets.html"><span id="MainTitleTicketSpan">Buy Tickets</span></a></h1></div>
 
-            <div id="FrontImage"><img id="FrontImageImage" src="svgstag.svg"></div>
+            <div id="FrontImage"><img id="FrontImageImage" src="img/svgstag.svg"></div>
 
             <div id="Footer">
                 site by <br id="FDes">Antonia Siu <br id="FDes"><span id="FMob">and </span>Michael Agius 
