--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
         <title>Hertford Ball Contact</title>
         <meta charset="UTF-8">
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100italic,100,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="./style.css" type="text/css">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
@@ -24,8 +24,8 @@
         <meta name="msapplication-TileColor" content="#b91d47">
         <meta name="msapplication-TileImage" content="/mstile-144x144.png">
         <meta name="theme-color" content="#b81818">
-        <script src="menu.js" type="text/javascript"></script>
-        <script src="konami.js" type="text/javascript"></script>
+        <script src="js/menu.js" type="text/javascript"></script>
+        <script src="js/konami.js" type="text/javascript"></script>
 
         <script>
 
@@ -42,7 +42,7 @@
 
             <nav>
                 <ul>
-                    <li onclick="thing()" class="show"><img src="menu512.png" alt="Menu"></li>
+                    <li onclick="thing()" class="show"><img src="img/menu512.png" alt="Menu"></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sponsors.html">Sponsors</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
