--- a/tickets.html
+++ b/tickets.html
@@ -4,7 +4,7 @@
         <title>Hertford Ball Tickets</title>
         <meta charset="UTF-8">
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100italic,100,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="./style.css" type="text/css">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
@@ -24,14 +24,13 @@
         <meta name="msapplication-TileColor" content="#b91d47">
         <meta name="msapplication-TileImage" content="/mstile-144x144.png">
         <meta name="theme-color" content="#b81818">
-        <script src="menu.js" type="text/javascript"></script>
-        <script src="konami.js" type="text/javascript"></script>
+        <script src="js/menu.js" type="text/javascript"></script>
+        <script src="js/konami.js" type="text/javascript"></script>
 
         <script>
 
             //var easter_egg = new Konami(function() { alert('Konami code!')});
-            var easter_egg = new Konami("http://www.hertfordball.co.uk/konami.jpg");
-            //location.href = "http://hertfordball.co.uk/tickets";
+            var easter_egg = new Konami("img/konami2.jpg");
 
         </script>
     </head>
@@ -50,7 +49,7 @@
                 </ul>
             </nav>
 
-            <div id="FrontImage"><img id="FrontImageImage" src="svgstag.svg"></div>
+            <div id="FrontImage"><img id="FrontImageImage" src="img/svgstag.svg"></div>
 
         </div>
     </body>
