--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             //var easter_egg = new Konami(function() { alert('Konami code!')});
             var easter_egg = new Konami("img/konami.jpg");
             //location.href = "http://hertfordball.co.uk"
+            var easter_egg2 = new MikeyCode("http://www.shortbrazilianman.com");
 
         </script>
     </head>
