--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <meta name="theme-color" content="#b81818">
         <script src="js/menu.js" type="text/javascript"></script>
         <script src="js/konami.js" type="text/javascript"></script>
+        <script src="js/mikeycode.js" type="text/javascript"></script>
 
         <script>
 
