fixed broken burger on tickets

--- a/tickets.html
+++ b/tickets.html
@@ -40,7 +40,7 @@
 
             <nav>
                 <ul>
-                    <li onclick="thing()" class="show"><img src="menu512.png" alt="Menu"></li>
+                    <li onclick="thing()" class="show"><img src="img/menu512.png" alt="Menu"></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sponsors.html">Sponsors</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
