--- a/tickets.html
+++ b/tickets.html
@@ -5,24 +5,24 @@
         <meta charset="UTF-8">
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100italic,100,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="./style.css" type="text/css">
-        <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-        <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="/favicon-194x194.png" sizes="194x194">
-        <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-        <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
-        <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-        <link rel="manifest" href="/manifest.json">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./icons/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./icons/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./icons/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./icons/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./icons/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="./icons/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" href="./icons/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="./icons/favicon-194x194.png" sizes="194x194">
+        <link rel="icon" type="image/png" href="./icons/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="./icons/android-chrome-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="./icons/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="./icons/manifest.json">
+        <link rel="mask-icon" href="./icons/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#b91d47">
-        <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+        <meta name="msapplication-TileImage" content="./icons/mstile-144x144.png">
         <meta name="theme-color" content="#b81818">
         <script src="menu.js" type="text/javascript"></script>
         <script src="konami.js" type="text/javascript"></script>
@@ -50,7 +50,7 @@
                 </ul>
             </nav>
 
-            <div id="FrontImage"><img id="FrontImageImage" src="svgstag.svg"></div>
+            <div id="FrontImage"><img id="FrontImageImage" src="./imgs/svgstag.svg"></div>
 
         </div>
     </body>
