--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <head>
         <title>Hertford Ball 2017</title>
         <meta charset="UTF-8">
-        <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100italic,100,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:100,100i,300|Parisienne' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="./style.css" type="text/css">
+        <link rel="stylesheet" href="./menu.css" type="text/css">
+        <link rel="stylesheet" href="./home.css" type="text/css">
+
+        <!-- icons -->
         <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="./icons/apple-touch-icon-72x72.png">
@@ -26,20 +30,12 @@
         <meta name="theme-color" content="#b81818">
         <script src="menu.js" type="text/javascript"></script>
         <script src="konami.js" type="text/javascript"></script>
-
-            //var easter_egg = new Konami(function() { alert('Konami code!')});
-            var easter_egg = new Konami("http://www.hertfordball.co.uk/konami.jpg");
-            //location.href = "http://hertfordball.co.uk"
-
-        </script>
     </head>
-    <body class="RedBack">
-
-        <div id="Container">
-
+    <body>
+        <header>
             <nav>
                 <ul>
-                    <li onclick="thing()" class="show">Menu</li>
+                    <li id="menu" onclick="thing()" class="show">Menu</li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sponsors.html">Sponsors</a></li>
                     <li><a href="tickets.html">Tickets</a></li>
@@ -47,15 +43,19 @@
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
+        </header>
 
-            <div id="MainTitle"><h1><span>Hertford Ball 2OI7</span></h1></div>
+        <main>
 
-            <div id="FrontImage"><img id="FrontImageImage" src="./imgs/svgstag.svg"></div>
-
-            <div id="Footer">
-                site by<br>Antonia Siu<br>Michael Agius
+            <div id="MainTitle">
+                <h1><span>Hertford Ball 2OI7</span></h1>
+                <h2>paradise</h2>
             </div>
 
-        </div>
+        </main>
+
+        <footer>
+            site by<br>Antonia Siu<br>Michael Agius
+        </footer>
     </body>
 </html>
