--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100italic,100,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="./css/style.css" type="text/css">
         <link rel="stylesheet" href="./css/menu.css" type="text/css">
+        <link rel="stylesheet" href="./css/contact.css" type="text/css">
 
         <!-- icons -->
         <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
@@ -52,9 +53,9 @@
             </nav>
         </header>
 
-        <div id="Container">
+        <main>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>President</h1>
                 <h2>Jei Diwakar</h2>
                 <h3><a href="mailto:president@hertfordball.co.uk">
@@ -62,7 +63,7 @@
                 </a></h3>
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Vice President</h1>
                 <h2>Justine Raoult</h2>
                 <h3><a href="mailto:vicepresident@hertfordball.co.uk">
@@ -70,7 +71,7 @@
                 </a></h3>
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Sponsorship</h1>
                 <h2>Jong Kwon</h2>
                 <h3><a href="mailto:sponsorship@hertfordball.co.uk">
@@ -78,7 +79,7 @@
                 </a></h3>
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Secretary</h1>
                 <h2>Hae Jin Yang</h2>
                 <h3><a href="mailto:secretary@hertfordball.co.uk">
@@ -86,7 +87,7 @@
                 </a></h3>
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Treasurer</h1>
                 <h2>Holly Wagstaff</h2>
                 <h3><a href="mailto:treasurer@hertfordball.co.uk">
@@ -94,7 +95,7 @@
                 </a></h3>
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Marketing</h1>
                 <h2>Ellie Foster</h2>
                 <h3><a href="mailto:marketing@hertfordball.co.uk">
@@ -102,7 +103,7 @@
                 </a></h3>
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Logistics</h1>
                 <h2>Beth Partridge</h2>
                 <h3><a href="mailto:logistics@hertfordball.co.uk">
@@ -110,7 +111,7 @@
                 </a></h3>
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Food and Drink</h1>
                 <h2>Chloë Jacklin &amp; Aditi Aggarwal</h2>
                 <h3><a href="mailto:catering@hertfordball.co.uk">
@@ -118,7 +119,7 @@
                 </a></h3>
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Health and Safety</h1>
                 <h2>Michael Agius</h2>
                 <h3><a href="mailto:health_safety@hertfordball.co.uk">
@@ -126,7 +127,7 @@
                 </a></h3>
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Tech Director</h1>
                 <h2>Michael Agius</h2>
                 <h3><a href="mailto:nerd@michaelagius.uk">
@@ -134,12 +135,12 @@
                 </a></h3>
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Anything Else</h1>
                 <h3><a href="mailto:info@hertfordball.co.uk">
                     info&#64;hertfordball.co.uk
                 </a></h3>
             </div>
-        </div>
+        </main>
     </body>
 </html>
