--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./css/style.css" type="text/css">
         <link rel="stylesheet" href="./css/menu.css" type="text/css">
         <link rel="stylesheet" href="./css/contact.css" type="text/css">
+        <link rel="stylesheet" href="./css/deet.css" type="text/css">
 
         <!-- icons -->
         <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
