--- a/sponsors.html
+++ b/sponsors.html
@@ -6,6 +6,7 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100italic,100,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="./css/style.css" type="text/css">
         <link rel="stylesheet" href="./css/menu.css" type="text/css">
+        <link rel="stylesheet" href="./css/deet.css" type="text/css">
 
         <!-- icons -->
         <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
@@ -126,7 +127,7 @@
 
             </div>
 
-            <div id="Deet">
+            <div class="Deet">
                 <h1>Sponsorship Contact</h1>
                 <h2>Jong Kwon</h2>
                 <h3><a href="mailto:sponsorship@hertfordball.co.uk">
