--- a/sponsors.html
+++ b/sponsors.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./css/style.css" type="text/css">
         <link rel="stylesheet" href="./css/menu.css" type="text/css">
         <link rel="stylesheet" href="./css/deet.css" type="text/css">
+        <link rel="stylesheet" href="./css/sponsors.css" type="text/css">
 
         <!-- icons -->
         <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
@@ -52,20 +53,16 @@
             </nav>
         </header>
 
-        <div id="Container">
-
+        <main>
             <div id="Title">
-                <h1 class="thin">Sponsorship Packages</h1>
+                <h1>Sponsorship Packages</h1>
             </div>
 
             <div id="Gold" class="sbox">
-
                 <div class="BoxSponsorLeft">
-
-                    £8000<br>
-                    <strong>one</strong> available
-                    <h1 class="thin spaced">GOLD</h1>
-
+                    <p>£8000<p>
+                    <p><strong>one</strong> available</p>
+                    <h1>GOLD</h1>
                 </div>
 
                 <div class="BoxSponsorRight">
@@ -81,20 +78,16 @@
                         <li>In-college networking event </li>
                     </ul>
                 </div>
-
             </div>
+
             <div id="Silver" class="sbox">
-
                 <div class="BoxSponsorLeft">
-
-                    £5000<br>
-                    <strong>one</strong> available
-                    <h1 class="thin spaced">SILVER</h1>
-
+                    <p>£5000</p>
+                    <p><strong>one</strong> available</p>
+                    <h1>SILVER</h1>
                 </div>
 
                 <div class="BoxSponsorRight">
-
                     <ul>
                         <li>Naming rights of alternative stage or smaller section of ball</li>
                         <li>Naming rights of a cocktail </li>
@@ -102,19 +95,15 @@
                         <li>Sponsor profile on website</li>
                         <li>Half page in ball program given to all attendees </li>
                         <li>Inclusion on all promotional materials (logo or name) </li>
-
                     </ul>
                 </div>
-
             </div>
+
             <div id="Bronze" class="sbox">
-
                 <div class="BoxSponsorLeft">
-
-                    £2000<br>
-                    <strong>multiple</strong> available
+                    <p>£2000</p>
+                    <p><strong>multiple</strong> available</p>
                     <h1 class="thin spaced">BRONZE</h1>
-
                 </div>
 
                 <div class="BoxSponsorRight">
@@ -124,7 +113,6 @@
                         <li>Sponsor profile in ball program given to all attendees</li>
                     </ul>
                 </div>
-
             </div>
 
             <div class="Deet">
@@ -134,6 +122,6 @@
                     sponsorship&#64;hertfordball.co.uk
                 </a></h3>
             </div>
-        </div>
+        </main>
     </body>
 </html>
