--- a/sponsors.html
+++ b/sponsors.html
@@ -47,7 +47,7 @@
                     <li id="menu" onclick="thing()" class="show"><img src="imgs/menu512.png" alt="Menu"></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sponsors.html">Sponsors</a></li>
-                    <li><a href="tickets.html">Tickets</a></li>
+                    <li><a href="http://tickets.hertfordball.uk">Tickets</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
