temp home refresh

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./css/style.css" type="text/css">
         <link rel="stylesheet" href="./css/menu.css" type="text/css">
         <link rel="stylesheet" href="./css/home.css" type="text/css">
-
+        <link href="https://fonts.googleapis.com/css?family=Cormorant+Unicase:400,600" rel="stylesheet">
         <!-- icons -->
         <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-touch-icon-60x60.png">
@@ -58,8 +58,8 @@
         <main>
 
             <div id="MainTitle">
-                <h1><span>Hertford Ball 2OI7</span></h1>
-                <h2>paradise</h2>
+                <h1><span>HERTFORD BALL 2017</span></h1>
+                <h2>paradise found</h2>
             </div>
 
         </main>
