--- a/newindex2.html
+++ b/newindex2.html
@@ -88,6 +88,7 @@
                         <div class="rotateleft postcard">
                             <img id="pimgparavion" src="newimg/paravionstamp.png">
                             <img id="pimgwavyline" src="newimg/wavylinestamp.png">
+                            <img id="pimgparadise" src="newimg/paradisestamp.png">
                             <div class="postcardleft"></div>
                             <div class="postcardright">
                                 <h1>Entertainment</h1>
